--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "main": "background.js",
   "dependencies": {
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "webpack": "^5.90.0"
   },
   "devDependencies": {
     "@vue/cli-service": "~5.0.0",
